# badge-dragonJARCon-2024

./: .gitignore  .gitmodules  README.md
firmware/: Makefile  README.md  sdkconfig.defaults
firmware/badge/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
firmware/badge/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/badge/main/apps/badge_link/: badge_link_module.c  badge_link_screens_module.c  badge_link_screens_module.h
firmware/badge/main/apps/infection/: engine.c  engine.h  infection.c  infection.h  infection_screens.c  infection_screens.h
firmware/badge/main/apps/infection/Scenes/: infection_scenes.c  infection_scenes.h
firmware/badge/main/apps/infection/include/: infection_cmd.h  virus.h
firmware/badge/main/apps/infection/scenes/: infection_scenes.h
firmware/badge/main/apps/infection/vaccine_builder/: vaccine_builder.c  vaccine_builder.h  vaccine_builder_screens.h
firmware/badge/main/include/: menus.h
firmware/badge/main/modules/badge_pairing/: badge_pairing.c  badge_pairing.h
firmware/components/ledc_controller_d/: CMakeLists.txt  ledc_controller_d.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/main/apps/badge_link/: badge_link_bitmaps.h  badge_link_module.c  badge_link_module.h  badge_link_screens_module.c  badge_link_screens_module.h
firmware/main/apps/infection/: engine.c  engine.h  infection.c  infection.h  infection_screens.c
firmware/main/apps/infection/bitmaps/: infection_bitmaps.h
firmware/main/apps/infection/include/: infection_cmd.h  virus.h
firmware/main/apps/infection/scenes/: infection_scenes.c  infection_scenes.h
firmware/main/apps/infection/vaccination/: vaccination.c  vaccination.h
firmware/main/apps/infection/vaccine_builder/: vaccine_builder.c  vaccine_builder.h  vaccine_builder_screens.c
firmware/main/apps/sbattery/: sbattery.c  sbattery.h
firmware/main/include/: menus.h
firmware/main/modules/badge_pairing/: badge_pairing.c  badge_pairing.h
firmware/main/modules/leds/: CMakeLists.txt  leds_d.c
firmware/main/modules/leds/include/: leds_d.h
firmware/resources/: baby-dragon.xcf
hardware/: badge-dragonJARCon-2024.kicad_pcb  badge-dragonJARCon-2024.kicad_prl  badge-dragonJARCon-2024.kicad_pro  badge-dragonJARCon-2024.kicad_sch  fp-lib-table
hardware/Footprints/: 2462_KEY.kicad_mod  2468_KEY.kicad_mod  AAA3528SURKCGKC09.kicad_mod  Badge_DragonJAR_2024_Actualizado.kicad_mod  Badge_DragonJAR_2024_Ojo.kicad_mod  Badge_DragonJAR_2024_Serigrafia.kicad_mod  Badge_DragonJAR_2024_cuerpo.kicad_mod  Display OLED 128 x32.kicad_mod  ESP32C6WROOM1N4.kicad_mod  LED_SK6812MINI_PLCC4_3.5x3.5mm_P1.75mm.kicad_mod  MSK12C02.kicad_mod  PinHeader_1x04_P2.54mm_Vertical.kicad_mod
hardware/Footprints/3D/: 128x32-OLED.SLDPRT  AAA3528RBGS_08-09.step  ESP32-C6-WROOM-1-N4.step  MSK12C02.stp
